# NeralEngine

./: .clang-format  .gitignore  CMakeLists.txt
NRender/: App.cpp  App.h  CMakeLists.txt  Camera.h  Event.h  Matrix4f.natvis  NRender.sln  NRender.vcxproj  NRender.vcxproj.filters  ObjLoader.hpp  SoftRender.cpp  SoftRender.h  Triangle.h  Vectors.hpp  Window.cpp  Window.h  cmake_install.cmake  main.cpp
NRender/Common/Test/: EventTest.cpp  LoggerTest.cpp  TimerTest.cpp  UtilsTest.cpp
NRender/Common/include/: DXUtils.h  Event.h  Event.hpp  Logger.h  ObjLoader.hpp  RenderBase.h  StaticString.hpp  Timer.h  Utils.h  Vectors.hpp  Win32APIHelper.h  WinAPIHelper.h
NRender/Common/source/: DXUtils.cpp  Logger.cpp  Timer.cpp  Utils.cpp  Win32APIHelper.cpp  WinAPIHelper.cpp
NRender/D3D12Render/: D3D12Render.cpp  D3D12Render.h
NRender/PublicTestComponent/: CMakeLists.txt
NRender/RayTrackingRender/: CMakeLists.txt
NRender/SoftRender/: SoftRender.cpp  SoftRender.h
NRender/Test/: CMakeLists.txt  EventTest.cpp  LoggerTest.cpp  StaticStringTest.cpp  TestMain.cpp  TestMain.h  TimerTest.cpp  UtilsTest.cpp  VectorTest.cpp
NRender/WindowFramework/include/: App.h  Window.h
NRender/WindowFramework/source/: App.cpp  Window.cpp
NeralEngine/: CMakeLists.txt  main.cpp
NeralEngine/Common/: CMakeLists.txt
NeralEngine/Common/Test/: EventTest.cpp  LoggerTest.cpp  StaticStringTest.cpp  TimerTest.cpp  UtilsTest.cpp  VectorTest.cpp
NeralEngine/Common/include/: Camera.h  DXUtils.h  DuskTMP.hpp  Event.hpp  LockFreeQueue.hpp  Logger.h  ObjLoader.hpp  RenderBase.h  StaticString.hpp  Timer.h  Triangle.h  Utils.h  Vectors.hpp  Win32APIHelper.h
NeralEngine/Common/source/: DXUtils.cpp  Timer.cpp  Win32APIHelper.cpp
NeralEngine/D3D12Render/: CMakeLists.txt  D3D12Render.cpp  D3D12Render.h
NeralEngine/PublicTestComponent/: TestMain.cpp  TestMain.h
NeralEngine/SoftRender/: CMakeLists.txt  SoftRender.cpp  SoftRender.h
NeralEngine/Version/: CMakeLists.txt  IncreaseBuildVersion.cmake  Version.cpp  Version.h  VersionHelper.cpp  VersionHelper.h
NeralEngine/Version/Test/: VersionTest.cpp
NeralEngine/WindowFramework/: CMakeLists.txt
NeralEngine/WindowFramework/include/: App.h  Event.hpp  Window.h
NeralEngine/WindowFramework/source/: App.cpp  Window.cpp
Test/: CMakeLists.txt  CTestTestfile.cmake  EventTest.cpp  LoggerTest.cpp  StaticStringTest.cpp  Test.vcxproj  TestMain.hpp  VectorTest.cpp  cmake_install.cmake  test.cpp
VectorOperatorTest/: VectorOperatorTest.vcxproj
