macro(create_gtest TEST_NAME)
    add_executable(${TEST_NAME} ${TEST_NAME}.cpp)
    if(MSVC)
        set_property(TARGET ${TEST_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
        target_link_libraries(${TEST_NAME} PRIVATE GTest::gtest GTest::gtest_main ${RELATIVE_LIBS})
    else()
        target_link_libraries(${TEST_NAME} PRIVATE GTest::gtest GTest::gtest_main pthread ${RELATIVE_LIBS})
    endif()
    set_target_properties(${TEST_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Test)
    set_target_properties(${TEST_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/Test)
    set_target_properties(${TEST_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/Test)
    set_target_properties(${TEST_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_BINARY_DIR}/Test)
    set_target_properties(${TEST_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_BINARY_DIR}/Test)
    gtest_discover_tests(${TEST_NAME}
                         WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Test
                         TEST_LIST ${GTEST_LIST})
    add_dependencies(BuildAndTest ${TEST_NAME})
    message("----create gtest:${TEST_NAME} --succeeded")
endmacro()

find_package(GTest REQUIRED)
if (GTEST_FOUND)
    include_directories(${GTEST_INCLUDE_DIRS})
    enable_testing()
    add_custom_target(BuildAndTest ${CMAKE_CTEST_COMMAND} -V --rerun-failed --output-on-failure)
    set_target_properties(BuildAndTest PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Test)
    set_target_properties(BuildAndTest PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_SOURCE_DIR}/Test)
    set_target_properties(BuildAndTest PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/Test)
    set_target_properties(BuildAndTest PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${PROJECT_SOURCE_DIR}/Test)
    set_target_properties(BuildAndTest PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${PROJECT_SOURCE_DIR}/Test)

    include(GoogleTest)
    set(CTEST_PARALLEL_LEVEL 6)
    aux_source_directory(. TEST_SOURCE_FILES)

    FOREACH(it ${TEST_SOURCE_FILES})
        get_filename_component(OUTPUT_FILE_WLE ${it} NAME_WLE)
        create_gtest(${OUTPUT_FILE_WLE})
    ENDFOREACH()
endif()